# Masters_Jetson

./: README.md
Camera/devel/: .catkin
Camera/devel/lib/Camera/: Camera_node
Camera/devel/lib/pkgconfig/: Camera.pc
Camera/devel/share/Camera/cmake/: CameraConfig.cmake
Camera/src/Camera/: CMakeLists.txt
Camera/src/Camera/src/: camera_node.cpp
Camera_Cpp/: CMakeLists.txt  gstreamer_view.cpp
Camera_Cpp/Camera_Test/: CMakeLists.txt  main.cpp  run.sh
Camera_Cpp/Camera_Test/src/: main.cpp
Camera_Cpp/src/: Camera_Streamer.cpp
jetson_multimedia_api/argus/Camera_Test/: CMakeLists.txt
jetson_multimedia_api/argus/samples/Camera_Test/: main.cpp
scripts/: camera_test.py
ws/: runthis.sh
ws/.catkin_tools/profiles/default/: config.yaml  devel_collisions.txt
ws/arduino/: microController.ino
ws/arduino/arduino-1.8.16/hardware/tools/: mktinyfat  precompile_helper  stdout_redirect  teensy_gateway  teensy_ports  teensy_post_compile  teensy_reboot  teensy_restart  (+3 more)
ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
ws/devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh  setup.sh
ws/devel/.private/orb_slam2_ros/: .catkin  local_setup.sh  setup.sh
ws/devel/.private/stereo/: .catkin  .rosinstall  local_setup.sh
ws/devel/include/orb_slam2_ros/: SaveMap.h  SaveMapRequest.h  SaveMapResponse.h  dynamic_reconfigureConfig.h
ws/devel/lib/orb_slam2_ros/: orb_slam2_ros_mono  orb_slam2_ros_rgbd  orb_slam2_ros_stereo
ws/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  orb_slam2_ros.pc  stereo.pc
ws/devel/lib/stereo/: stereo
ws/logs/orb_slam2_ros/: build.check.005.log.stderr  build.make.000.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.007.log.stderr  build.make.008.log.stderr
ws/logs/stereo/: build.make.000.log.stderr  build.make.014.log.stderr  build.make.015.log.stderr
ws/src/orb_slam_2_ros/: CMakeLists.txt
ws/src/slam_ORB2/: CMakeLists.txt  package.xml
ws/src/stereo/: CMakeLists.txt
ws/src/stereo/src/: video copy.cpp  video.cpp
(+55 files in other folders)
